[package]
name = "ramenon"
version = "0.1.2"
edition = "2021"
description = "Roman numerals converter"
documentation = "https://docs.rs/ramenon/0.1.2/ramenon/"
readme = "README.md"
homepage = "https://crates.io/crates/ramenon"
repository = "https://github.com/mdmundo/ramenon/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
